--- a/UNLMaps/UNLMaps.iOS/packages.config
+++ b/UNLMaps/UNLMaps.iOS/packages.config
@@ -5,5 +5,9 @@
   <package id="Prism.Forms" version="6.2.0" targetFramework="xamarinios10" />
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="xamarinios10" />
   <package id="Unity" version="4.0.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Build.Download" version="0.2.1" targetFramework="xamarinios10" />
   <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.GoogleMaps" version="1.7.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Forms.GoogleMaps.Bindings" version="1.0.1" targetFramework="xamarinios10" />
+  <package id="Xamarin.Google.iOS.Maps" version="1.13.1.0" targetFramework="xamarinios10" />
 </packages>
