--- a/UNLMaps/UNLMaps/packages.config
+++ b/UNLMaps/UNLMaps/packages.config
@@ -6,4 +6,6 @@
   <package id="Prism.Unity.Forms" version="6.2.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Unity" version="4.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
   <package id="Xamarin.Forms" version="2.3.3.180" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms.GoogleMaps" version="1.7.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="Xamarin.Forms.GoogleMaps.Bindings" version="1.0.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
