Try to work with X.F.GoogleMaps

--- a/UNLMaps/UNLMaps.Droid/UNLMaps.Droid.csproj
+++ b/UNLMaps/UNLMaps.Droid/UNLMaps.Droid.csproj
@@ -163,6 +163,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="MyApp.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -190,6 +191,9 @@
       <Project>{32c58fa6-d334-4050-b1fa-850f3c7443cc}</Project>
       <Name>UNLMaps</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\pin_red.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
