--- a/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
+++ b/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
@@ -1,5 +1,17 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="UNLMaps.Droid" android:versionCode="1" android:versionName="1.0" android:installLocation="preferExternal">
 	<uses-sdk android:minSdkVersion="15" />
-	<application android:label="UNLMaps.Droid"></application>
+  <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_MOCK_LOCATION" />
+  <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
+  <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+  <uses-permission android:name="android.permission.INTERNET" />
+  <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+  <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+	<application android:label="UNLMaps.Droid">
+    <meta-data
+       android:name="com.google.android.maps.v2.API_KEY"
+       android:value="AIzaSyAmsgbfZLx1Kubczv_2XQaKaMNfanOOYVw"/>
+  </application>
 </manifest>
