--- a/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
+++ b/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
@@ -10,8 +10,14 @@
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
 	<application android:label="UNLMaps.Droid">
+<!--    <meta-data-->
+<!--       android:name="com.google.android.maps.v2.API_KEY"-->
+<!--       android:value="AIzaSyAvlfLtnE72GeNebaHru7fzkpylxfImdN0"/>-->
+<!--    <meta-data-->
+<!--      android:name="com.google.android.geo.API_KEY"-->
+<!--      android:value="AIzaSyAvlfLtnE72GeNebaHru7fzkpylxfImdN0"/>-->
     <meta-data
-       android:name="com.google.android.maps.v2.API_KEY"
-       android:value="AIzaSyAmsgbfZLx1Kubczv_2XQaKaMNfanOOYVw"/>
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyAmsgbfZLx1Kubczv_2XQaKaMNfanOOYVw"/>
   </application>
 </manifest>
