--- a/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
+++ b/UNLMaps/UNLMaps.Droid/Properties/AndroidManifest.xml
@@ -9,12 +9,15 @@
   <uses-permission android:name="android.permission.INTERNET" />
   <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
   <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
-	<application android:label="UNLMaps.Droid">
+  <!-- Google Maps for Android v2 will cache map tiles on external storage -->
+  <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  
+  <application android:label="UNLMaps.Droid">
 <!--    <meta-data-->
 <!--       android:name="com.google.android.maps.v2.API_KEY"-->
 <!--       android:value="AIzaSyAvlfLtnE72GeNebaHru7fzkpylxfImdN0"/>-->
     <meta-data
         android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyCwiaCPGDasuUA0qUSaMcHqNLXkeyVXFgY"/>
+        android:value="AIzaSyAbiHwqMrkqhBvnMIFAOpcoD3ligxkr88g"/>
   </application>
 </manifest>
